--- a/app/views/tariffs.scala.html
+++ b/app/views/tariffs.scala.html
@@ -122,7 +122,7 @@
                             <div class="col-sm-2"></div>
                             <div class="col-sm-4">
                                 <select class="form-control" id="subscription_period" name="subscription_period">
-                                    <option value="" selected disabled>период</option>
+                                    <option value="" disabled>период</option>
                                     <option value="1">1 месяц</option>
                                     <option value="3">3 месяца</option>
                                     <option value="6">6 месяцев</option>
@@ -181,7 +181,7 @@
                                 <div class="col-sm-5">
                                     <input type="text" class="form-control" disabled value="кол-во актуальных видео">
                                     <input type="hidden" class="form-control" id="op_name[1]" name="op_name[1]" value="кол-во актуальных видео">
-                                    <input type="hidden" id="op_type[3]" name="op_type[3]" value="limit">
+                                    <input type="hidden" id="op_type[1]" name="op_type[1]" value="limit">
                                 </div>
                                 <div class="col-sm-3">
                                     <input type="text" class="form-control" id="op_limit[1]" name="op_limit[1]" placeholder="Сколько?">
